feat(finish): complete turorial

--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -32,3 +32,12 @@
     }
   }
 }
+
+.copyright {
+  width: 70%;
+  font-size: 1.4rem;
+  margin: 0 auto;
+  color: $color-grey-light-2;
+  margin-top: 6rem;
+  color: white;
+}
