--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -14,6 +14,11 @@
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(6, 1fr);
     align-items: center;
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1 / -1;
+      padding: 3rem;
+    }
   }
 
   &__img--1 {
@@ -21,6 +26,13 @@
     grid-row: 2 / 6;
     grid-column: 2 / 6;
     box-shadow: 0 2rem 5rem rgba(black, 0.1);
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1 / 5;
+      grid-row: 1 / -1;
+      height: 100%;
+      width: 100%;
+    }
   }
 
   &__img--2 {
@@ -29,6 +41,11 @@
     grid-row: 4 / 6;
     width: 105%;
     z-index: 1;
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-row: 1 / -1;
+      width: 100%;
+    }
   }
 
   &__content {
@@ -49,6 +66,11 @@
     display: grid;
     align-content: center;
     justify-items: flex-start;
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1 / -1;
+      grid-row: 5 / 6;
+    }
   }
 
   &__text {
